# VSC_cpp_template

./: CMakeLists.txt
inc/: Test.hpp
src/: Test.cpp  main.cpp
